--- a/pipeline/test.conf
+++ b/pipeline/test.conf
@@ -1,11 +1,20 @@
-input {
-  http {
-    port => 4000
-  }
-}
+filter {
+    grok {
+        match => {
+            "message" =>         }
+    }
+    date {
+        match => [ "time", "dd/MMM/YYYY:HH:mm:ss Z" ]
+        locale => en
+    }
 
-filter {}
+    geoip {
+        source => "remote_ip"
+        target => "geoip"
+    }
 
-output {
-  stdout { codec => rubydebug }
+    useragent {
+        source => "agent"
+        target => "user_agent"
+    }
 }
